// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses function declaration 1`] = `
Node "Program" (1:0)
  body: Array [
    Node "FunctionDeclaration" (1:0)
      value: Node "AssignmentExpression" (1:4)
        left: Node "FunctionParameterExpression" (1:4)
          id: Node "Identifier" (1:4)
            name: "calc"
          params: Array [
            Node "Identifier" (1:9)
              name: "a",
            Node "Identifier" (1:12)
              name: "b",
            Node "Identifier" (1:15)
              name: "c",
          ]
        right: Node "MathExpression" (1:20)
          left: Node "Identifier" (1:20)
            name: "a"
          operator: "+"
          right: Node "MathExpression" (1:24)
            left: Node "Identifier" (1:24)
              name: "b"
            operator: "*"
            right: Node "Identifier" (1:28)
              name: "c",
    Node "FunctionDeclaration" (2:0)
      value: Node "AssignmentExpression" (2:4)
        left: Node "FunctionParameterExpression" (2:4)
          id: Node "Identifier" (2:4)
            name: "foo"
          params: Array [
            Node "Identifier" (2:8)
              name: "a",
            Node "Identifier" (2:11)
              name: "add",
          ]
        right: Node "FunctionCallExpression" (2:18)
          id: Node "Identifier" (2:18)
            name: "add"
          params: Array [
            Node "Identifier" (2:22)
              name: "a",
          ],
    Node "FunctionDeclaration" (3:0)
      value: Node "AssignmentExpression" (3:4)
        left: Node "FunctionParameterExpression" (3:4)
          id: Node "Identifier" (3:4)
            name: "foo"
          params: Array []
        right: Node "FunctionCallExpression" (3:12)
          id: Node "Identifier" (3:12)
            name: "show"
          params: Array [
            Node "StringLiteral" (3:17)
              value: "hello world",
          ],
  ]
`;

exports[`parses function declaration 2`] = `
Node "Program" (1:0)
  body: Array [
    Node "FunctionDeclaration" (1:0)
      value: Node "AssignmentExpression" (1:4)
        left: Node "FunctionParameterExpression" (1:4)
          id: Node "Identifier" (1:4)
            name: "add"
          params: Array [
            Node "Identifier" (1:8)
              name: "a",
            Node "Identifier" (1:11)
              name: "b",
          ]
        right: Node "BlockStatement" (1:16)
          body: Array [
            Node "LetDeclaration" (2:2)
              value: Node "AssignmentExpression" (2:6)
                left: Node "Identifier" (2:6)
                  name: "c"
                right: Node "MathExpression" (2:10)
                  left: Node "Identifier" (2:10)
                    name: "a"
                  operator: "+"
                  right: Node "Identifier" (2:14)
                    name: "b",
            Node "ReturnStatement" (4:2)
              value: Node "Identifier" (4:9)
                name: "c",
          ],
    Node "FunctionDeclaration" (7:0)
      value: Node "AssignmentExpression" (7:4)
        left: Node "FunctionParameterExpression" (7:4)
          id: Node "Identifier" (7:4)
            name: "foo"
          params: Array []
        right: Node "FunctionCallExpression" (7:12)
          id: Node "Identifier" (7:12)
            name: "add"
          params: Array [
            Node "NumericLiteral" (7:16)
              value: 3,
            Node "NumericLiteral" (7:19)
              value: 4,
          ],
  ]
`;

exports[`parses function declaration 3`] = `"Expected FunctionParameterExpression, but got Identifier"`;

exports[`parses function declaration 4`] = `"Syntax error: unexpected string \\"hello world\\" at 1:8"`;

exports[`parses function declaration 5`] = `"Expected Identifier or FunctionCallExpression or MathExpression or BlockStatement or StringLiteral or BooleanLiteral or NumericLiteral, but got UnionOperation"`;

exports[`parses function declaration 6`] = `"Syntax error: unexpected end of block at 1:12"`;

exports[`parses function declaration 7`] = `"Syntax error: unexpected end of block at 1:12"`;

exports[`parses let declaration 1`] = `
Node "Program" (1:0)
  body: Array [
    Node "LetDeclaration" (1:0)
      value: Node "AssignmentExpression" (1:4)
        left: Node "Identifier" (1:4)
          name: "foo"
        right: Node "NumericLiteral" (1:10)
          value: 10,
    Node "LetDeclaration" (2:0)
      value: Node "AssignmentExpression" (2:4)
        left: Node "Identifier" (2:4)
          name: "bar"
        right: Node "BooleanLiteral" (2:10)
          value: true,
    Node "LetDeclaration" (3:0)
      value: Node "AssignmentExpression" (3:4)
        left: Node "Identifier" (3:4)
          name: "baz"
        right: Node "StringLiteral" (3:10)
          value: "Hello world",
  ]
`;

exports[`parses let declaration 2`] = `"Expected AssignmentExpression, but got Identifier"`;

exports[`parses let declaration 3`] = `"Expected Identifier or FunctionCallExpression or MathExpression or StringLiteral or BooleanLiteral or NumericLiteral, but got UnionOperation"`;

exports[`parses main declaration 1`] = `
Node "Program" (1:0)
  body: Array [
    Node "MainDeclaration" (1:0)
      value: Node "FunctionCallExpression" (1:5)
        id: Node "Identifier" (1:5)
          name: "foo"
        params: Array [],
  ]
`;

exports[`parses main declaration 2`] = `
Node "Program" (1:0)
  body: Array [
    Node "MainDeclaration" (1:0)
      value: Node "FunctionCallExpression" (1:5)
        id: Node "Identifier" (1:5)
          name: "foo"
        params: Array [
          Node "Identifier" (1:9)
            name: "bar",
        ],
  ]
`;

exports[`parses main declaration 3`] = `"Syntax error: duplicate keyword \\"main\\" at 2:0"`;

exports[`parses main declaration 4`] = `"Expected FunctionCallExpression, but got AssignmentExpression"`;

exports[`parses math expression 1`] = `
Node "Program" (1:0)
  body: Array [
    Node "LetDeclaration" (1:0)
      value: Node "AssignmentExpression" (1:4)
        left: Node "Identifier" (1:4)
          name: "a"
        right: Node "MathExpression" (1:8)
          left: Node "NumericLiteral" (1:8)
            value: 10
          operator: "*"
          right: Node "MathExpression" (1:13)
            left: Node "NumericLiteral" (1:13)
              value: 30
            operator: "+"
            right: Node "MathExpression" (1:18)
              left: Node "Identifier" (1:18)
                name: "b"
              operator: "-"
              right: Node "MathExpression" (1:22)
                left: Node "NumericLiteral" (1:22)
                  value: 20
                operator: "/"
                right: Node "Identifier" (1:27)
                  name: "foo",
  ]
`;

exports[`parses type declaration 1`] = `
Node "Program" (1:0)
  body: Array [
    Node "TypeDeclaration" (1:0)
      value: Node "AssignmentExpression" (1:5)
        left: Node "Identifier" (1:5)
          name: "Foo"
        right: Node "Identifier" (1:11)
          name: "Bar",
    Node "TypeDeclaration" (2:0)
      value: Node "AssignmentExpression" (2:5)
        left: Node "Identifier" (2:5)
          name: "Bar"
        right: Node "UnionOperation" (2:11)
          values: Array [
            Node "Identifier" (2:11)
              name: "Boolean",
            Node "Identifier" (2:21)
              name: "String",
            Node "Identifier" (2:30)
              name: "Number",
            Node "StringLiteral" (2:39)
              value: "foo",
            Node "NumericLiteral" (2:47)
              value: 42,
          ],
    Node "TypeDeclaration" (3:0)
      value: Node "AssignmentExpression" (3:5)
        left: Node "TypeParameterExpression" (3:5)
          id: Node "Identifier" (3:5)
            name: "Maybe"
          params: Array [
            Node "Identifier" (3:11)
              name: "Number",
          ]
        right: Node "UnionOperation" (3:21)
          values: Array [
            Node "Identifier" (3:21)
              name: "Nothing",
            Node "Identifier" (3:31)
              name: "Number",
          ],
    Node "TypeDeclaration" (4:0)
      value: Node "AssignmentExpression" (4:5)
        left: Node "Identifier" (4:5)
          name: "Users"
        right: Node "TypeInstantiationExpression" (4:13)
          id: Node "Identifier" (4:13)
            name: "List"
          params: Array [
            Node "Identifier" (4:18)
              name: "User",
          ],
  ]
`;

exports[`parses type declaration 2`] = `"Expected Identifier or TypeInstantiationExpression or UnionOperation or StringLiteral or BooleanLiteral or NumericLiteral, but got MathExpression"`;
